# iac_agent

./: .env.example  .gitignore  LICENSE  README.md  UI_SPECIFICATION.md  program_requirement.md  pyproject.toml  requirements-terminal.txt  setup.py
src/iac_agent/: __init__.py  cli.py  langgraph-llmintegration-plan.md  main.py
src/iac_agent/agents/: __init__.py  session_manager.py
src/iac_agent/api/: __init__.py  routes.py  websocket_manager.py
src/iac_agent/core/: __init__.py  config.py
src/iac_agent/database/: __init__.py  connection.py
src/iac_agent/infrastructure/: __init__.py  binary_manager.py
src/iac_agent/infrastructure/terminal/: pty_manager.py
src/iac_agent/mcp/: __init__.py
src/iac_agent/mcp/workspace/: __init__.py  client.py  server.py
src/iac_agent/providers/: __init__.py  llm_manager.py
src/iac_agent/static/web/: app.js  index.html  llm_connections.js  theme.js
src/iac_agent/static/web/components/: ActivityBar.js  App.js  ResizableQuadPane.js  SidePanel.js
src/iac_agent/static/web/components/panels/: LLMConfigPanel.js  WorkspacePanel.js
src/iac_agent/static/web/components/workspace/: AIConversation.js  DirectTerminal.js  HCLEditor.js  ResourceGraph.js
src/iac_agent/static/web/hooks/: useWebSocket.js
src/iac_agent/utils/: __init__.py  helpers.py
